--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 /* 2) carta base con fondo de guias.html cambia de color según dispositivos por media queris*/
 .carti-loca {
   background: linear-gradient(-25deg, white, #05668d, #028090, #00a896, #02c39a, #f0f3bd, black, #7400b8, #6930c3, #5e60ce, #5390d9, #4ea8de, #48bfe3, #56cfe1, #64dfdf, #72efdd, #80ffdb);
-  background-size: 400% 400%;
+  background-size: 400%;
   animation: gradient 15s ease infinite;
   overflow-x: hidden;
 }
@@ -89,6 +89,7 @@
   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%237400b8'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
 }
 
+/**/
 .page-header {
   background-image: linear-gradient(to top left, #590d22, #800f2f, #a4133c, #c9184a, #ff4d6d, #ff758f, #ff8fa3, #ffb3c1, #ffccd5, #fff0f3);
   color: black;
@@ -99,15 +100,18 @@ header .rosita {
   width: 100%;
 }
 
+/**/
 .whity {
   margin-top: 25%;
 }
 
+/**/
 .efecti {
   background-image: linear-gradient(to top left, #74d3ae, #678d58, #a6c48a, #f6e7cb, #dd9787);
   color: black;
 }
 
+/*index.html modificaciones en su body*/
 .curso {
   margin: 3%;
   padding: 3%;
@@ -1401,7 +1405,7 @@ p.center-date {
 }
 
 /**************************
-BAR-CHART
+Grafico que no use pero lo guardo aca por las dudas
 **************************
 .grafico.bar-chart {
   background: #3468AF;
@@ -1477,7 +1481,7 @@ BAR-CHART
 .contacto {
   margin-top: 5%;
   margin-bottom: 5%;
-  background: linear-gradient(-45deg, #cdb4db, lightpink, lightyellow);
+  background: linear-gradient(-25deg, white, #b0f2b4, #baf2e9, #bad7f2, #f2bac9, #f2e2ba, lightpink, #ff758f);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
