--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -7,5 +7,20 @@ $grid-breakpoints: (
   xxl: 1400px
 );
 
+/*mapa de media queris asociados con nombres para breakpoints mobile y tablet  este mapa se usa en MIXIN para cambiar los colores de fondo en guias.html*/
+ 
+@mixin devices ($breakpoint) { 
+  
+  @if $breakpoint == tablet {    
+  @media only screen and (max-width: 680px) {
+    @content;
+  }
+}
 
+@if $breakpoint == mobile {
+  @media only screen and (max-width: 481px) {
+    @content;
+  }
+}
+}
 
